[bumpversion]
current_version = 1.3.1
commit = True
tag = True

[metadata]
description-file = README.rst
license_files = LICENSE

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:pdb_manip_py/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:conda/meta.yaml]
search = version = "{current_version}"
replace = version = "{new_version}"

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
